--- a/src/front/views/user.ejs
+++ b/src/front/views/user.ejs
@@ -8,17 +8,32 @@
     <header>
       <% include ./partials/header %>
     </header>
-    <% users.map(user => { %>
-        <li>
-            <div>
-                <strong><%= user.username %>:</strong>
-                <strong><%= user.email %></strong>
-                <br>
-                <span><%= user.roles %></span>
-            </div>
-        </li>
-    <% }); %>
-    
-      <% include ./partials/footer %>
+
+    <main>
+        <table id="tablePreview" class="table table-hover">
+      
+            <thead>
+              <tr>
+                <th>id</th>
+                <th>Email</th>
+                <th>Username</th>
+                <th>Role</th>
+              </tr>
+            </thead>
+            
+            <% users.map(user => { %>
+            <tbody>
+                <tr>
+                  <th scope="row"><%= user._id %></th>
+                  <td><%= user.email %></td>
+                  <td><%= user.username %></td>
+                  <td><%= user.roles %></td>
+                </tr>
+            </tbody>
+            <% }); %>
+            
+          </table>
+    </main>
+
   </body>
 </html>
