--- a/src/front/views/user.ejs
+++ b/src/front/views/user.ejs
@@ -9,8 +9,8 @@
       <% include ./partials/header %>
     </header>
 
-    <main>
-        <table id="tablePreview" class="table table-hover">
+    <main class='mt-4 pt-4'>
+        <table id="tablePreview" class="table table-hover container">
       
             <thead>
               <tr>
