--- a/src/front/views/index.ejs
+++ b/src/front/views/index.ejs
@@ -8,8 +8,8 @@
       <% include ./partials/header %>
     </header>
 
-    <main class='container'>
-        <div class="jumbotron">
+    <main class='mt-4 pt-4'>
+        <div class="jumbotron container">
             <h1 class="display-3">Hello, world!</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
