--- a/src/front/views/login.ejs
+++ b/src/front/views/login.ejs
@@ -4,19 +4,69 @@
     <% include ./partials/head %>
 </head>
 <body>
-    <h1>Login</h1>
-<form method="post" action="/user/login">
-  <p>
-    <label>Email:</label>
-    <input type="text" name="email">
-  </p>
-  <p>
-    <label>Password:</label>
-    <input type="text" name="password">
-  </p>
-  <p>
-    <input type="submit" value="Login">
-  </p>
-</form>
+    <div class="container">    
+        <div id="loginbox" class="mainbox col-md-7 col-md-offset-3 col-sm-8 col-sm-offset-2 margin-top-md">                    
+            <div class="panel panel-primary" >
+                <div class="panel-heading">
+                    <div class="panel-title">Login - DevWilliam</div>
+                </div>     
+ 
+                <div class="panel-body padding-top-md" >
+                    <div id="login-alert" class="alert alert-danger col-sm-12">
+                        <span class="glyphicon glyphicon-exclamation-sign"></span>
+                        <span id="mensagem"></span>
+                    </div>      
+                    <form id="login-form" class="form-horizontal" role="form" action="/user/login" method="post">             
+                        <div class="input-group margin-bottom-md">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="Informe seu E-mail">                                        
+                        </div>
+                            
+                        <div class="input-group margin-bottom-md">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input type="password" class="form-control" id="password" name="senha" required placeholder="Informe sua Senha">
+                        </div>
+                                
+                        <div class="form-group margin-top-pq">
+                            <div class="col-sm-12 controls">
+                                <button type="button" class="btn btn-primary" name="btn-login" id="btn-login">
+                                  Entrar
+                                </button>
+                            </div>
+                        </div> 
+ 
+                    </form>     
+                </div>  
+ 
+            </div>  
+        </div>
+    </div> 
+<% include ./partials/footer %>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type='text/javascript'>
+   
+	$("#btn-login").click(function(){
+    const data = {email: $('#email').val(), password: $('#password').val()}
+    
+    const myHeaders = new Headers();
+
+    console.log(data)
+		$.ajax({
+			type : 'POST',
+      url  : '/user/login',
+			data : data,
+			dataType: 'json',
+			beforeSend: function(xhr)
+			{	
+        $("#btn-login").html('Validando ...');
+			},
+			success :  function(response){
+        console.log(response)
+        localStorage.setItem('projeto_app', response.token)
+		  }
+		});
+	});
+</script>
 </body>
 </html>
