--- a/src/front/views/partials/head.ejs
+++ b/src/front/views/partials/head.ejs
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Ola</title>
+<meta http-equiv="Content-Type" content="application/json" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href='https://bootswatch.com/4/lux/bootstrap.min.css'>
