--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,11 @@
     <form action="/user/login" onsubmit="login()" method="POST">
       <input type="text" id="email" name="email" required />
       <input type="password" id="password" name="password" required />
-
+      <input
+        type="hidden"
+        name="token"
+        value="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVkMGJlNGI2ZWUxNTA3MWUxYzIxZGFlOSIsInJvbGVzIjpbImFkbWluIl0sImlhdCI6MTU2MTg1ODY3MywiZXhwIjoxNTYxOTQ1MDczfQ.jIH4jGB-A2TukGXnP8HKfhWnz72lDdpNLcPvo_9-5jo"
+      />
       <button type="submit" onclick="getData()">Login</button>
     </form>
 
